fix: Align toggle button to the top of the link label

--- a/packages/css/src/components/table-of-contents/table-of-contents.scss
+++ b/packages/css/src/components/table-of-contents/table-of-contents.scss
@@ -34,7 +34,6 @@
 }
 
 .ams-table-of-contents__item {
-  align-items: center;
   column-gap: var(--ams-table-of-contents-item-gap);
   display: flex;
   flex-wrap: wrap;
